# center-notebooks

./: .dockerignore  .gitignore  Makefile  README.md  development.cue  jupyter-dev.Dockerfile  jupyter-nextflow-dev.Dockerfile  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: dagger-lint.yaml  dagger-lint.yaml.disabled  notebooks.yml
center-notebooks/Notebooks/: Create Cites from PMC Lookups - Monthly.ipynb  authors.json  cites with pandoc.ipynb  dataframe_performance_benchmarking.ipynb  manubot-style-title-case.csl
center-notebooks/knative-flaskapp-example/: app.py  example-app.yaml
center-notebooks/knative-install-resources/: gc.yaml  knative-serving.yaml  letsencrypt-http01-issuer.yaml
docs/vault/: Cuelang-Example.ipynb  Cuelang-Example.md  dagger.dagger-project-init.md  dagger.dagger-with-buildkit-and-podman.md  k8s.knative.install.md  root.md
src/Notebooks/: Create Cites from PMC Lookups.ipynb  Mondaydotcom Create Monthly Project Reports.ipynb  Mondaydotcom Create Monthly Task Reports.ipynb  Mondaydotcom Create Periodic Project Updates.ipynb  Mondaydotcom Export Data.ipynb  Mondaydotcom Set Task Integration Status.ipynb  Mondaydotcom Update Project Time.ipynb  example-secrets-bogus.yaml  lfai_tool_eda.ipynb  manubot-style-title-case.csl
src/Notebooks/examples/iris/: analyze_iris_data.ipynb  (+3 more)
src/dagger/demo/: demo.cue
src/dagger/python-builds/: python-builds.cue
src/dagger/python-ipynb-model-export/: python-ipynb-model-export.cue
src/knative-install-resources/: config-certmanager.yaml  hello.yaml  net-http01.yaml  service-10.yaml
(+19 files in other folders)
